# lightcontroller

./: Cargo.toml  license  readme.md  rocket.toml  tv.json
src/: main.rs
templates/: controls.html.hbs
