[package]
name = "lightcontroller"
version = "0.1.0"
authors = ["Alexander Schrode <Midix01@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
simplelog = "0.10.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"] 

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]